fixes Column-Select creation of TableExportQueryConverter. Current impl has issues with selection of SecondaryId-Columns